--- a/SoftwareEstatistica.Web/SoftwareEstatistica.Web.csproj
+++ b/SoftwareEstatistica.Web/SoftwareEstatistica.Web.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <RuntimeIdentifiers>win10-x64</RuntimeIdentifiers>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <UserSecretsId>aspnet-SoftwareEstatistica.Web-FD3DAD25-C4A7-4EEB-84AC-75A65FD6E4BD</UserSecretsId>
   </PropertyGroup>
